<resources>
    <string name="app_name">Швидкий кредит</string>
    <string name="title_activity_main">Швидкий кредит</string>
    <string name="main_activity_bnv_menu_credit_item_title">Кредит</string>
    <string name="main_activity_bnv_menu_menu_item_title">Меню</string>

    <!--Fragment Info-->
    <string name="info_dialog_fragment_title">Обери метод зв\'язку</string>
    <string name="info_dialog_fragment_phone">Телефон</string>
    <string name="info_dialog_fragment_most_used_questions_btn">Часті питання</string>
    <string name="info_dialog_fragment_btn_cancel">Скасувати</string>

    <!--Fragment UserPhone-->
    <string name="user_phone_fragment_input_et_hint"> введи номер</string>
    <string name="user_phone_fragment_tv_hint_caption">Номер мобільного телефону</string>
    <string name="user_phone_fragment_btn_auth">я вже зареєстрований</string>
    <string name="user_phone_fragment_license_caption">Підтверджуючи дану форму я погоджуюся з</string>
    <string name="user_phone_fragment_license_caption_btn">умовами використання сервісу</string>
    <string name="user_phone_fragment_title_message">Увага</string>
    <string name="user_phone_fragment_message_title_cancel_button">Продовжити</string>
    <string name="user_phone_fragment_send_code_error_text">Проблема з відправленням коду верифікації, будь ласка перевірте наявність інтернет доступу</string>
    <string name="user_phone_fragment_send_code_error_text_phone_register_already">Вказаний номер телефону вже було використано для реєстрації. Якщо ти вже зареєстрований - скористайся формою авторизації або відновлення паролю.</string>
    <string name="user_phone_fragment_tv_hint_caption_to_pass_recover">Відновлення паролю. Введи номер телефону свого облікового запису.</string>

    <!--Fragment CodeVerification-->
    <string name="code_verification_fragment_message_to_user_1">На твій номер </string>
    <string name="code_verification_fragment_message_to_user_2"> було надіслано код підтвердження. Введи його.</string>
    <string name="code_verification_fragment_edit_text_hint">введи код</string>
    <string name="code_verification_fragment_button_text">змінити номер</string>
    <string name="code_verification_fragment_code_error_text">Проблема з перевіркою коду верифікації, будь ласка перевірте наявність інтернет доступу</string>
    <string name="code_verification_fragment_code_resent_button">Не отримав код, натисни сюди</string>


    <!--Fragment user password setting-->
    <string name="password_setting_fragment_message_to_user">Вимоги до паролю: від 7 до 30 символів; мінімум 1 велика і 1 мала літери; 1 цифра; відсутність спецсимволів.</string>
    <string name="password_setting_fragment_edit_text_hint_password_enter">введи пароль</string>
    <string name="password_setting_fragment_edit_text_hint_password_confirm">введи пароль ще раз</string>
    <string name="password_setting_fragment_btn_confirm_title">підтвердити</string>
    <string name="password_setting_fragment_send_code_error_text">Проблема зі збереженням даних користувача, будь ласка перевірте наявність інтернет доступу</string>
    <string name="user_phone_number_prefix_text">+380</string>

    <!--Fragment authorization-->
    <string name="authorization_fragment_btn_auth_title">Авторизуватися</string>
    <string name="authorization_fragment_btn_pass_restore_title">Відновлення паролю</string>
    <string name="authorization_fragment_tv_message_title">Авторизація</string>
    <string name="authorization_fragment_message_server_not_respond">Авторизацію не виконано. Будь ласка перевірте наявність інтернет доступу</string>
    <string name="authorization_fragment_message_pass_and_phone_not_confirm">Авторизацію не виконано. Номер телефону або пароль введені невірно.</string>
    <string name="authorization_fragment_phone_et_hint">введи номер</string>

    <!--Fragment credit selection-->
    <string name="credit_fragment_btn_get_money_title">отримати кошти</string>
    <string name="credit_fragment_tv_to_pay_title">До сплати:</string>
    <string name="credit_fragment_tv_sum_title">Сума</string>
    <string name="credit_fragment_tv_term_title">Термін (1)</string>
    <string name="credit_fragment_info_dialog_caption">Деталі</string>
    <string name="credit_fragment_info_dialog_btn_next_caption">Продовжити</string>
    <string name="credit_fragment_info_dialog_credit">Кредит: </string>
    <string name="credit_fragment_info_dialog_percents">Відсотки: </string>
    <string name="credit_fragment_info_dialog_total">Всього: </string>
    <string name="credit_fragment_set_term_dialog_title">Термін</string>
    <string name="credit_fragment_set_credit_value_manually_text">Введи суму позики. В даний момент тобі доступна сума від 250 до 3000 грн.</string>
    <string name="credit_fragment_set_credit_term_manually_text">Введи термін позики. Ти можеш отримати позику на термін від 1 до 30 днів.</string>
    <string name="credit_fragment_set_credit_value_dialog_title">Сума</string>

    <!--Fragment user full name-->
    <string name="user_full_name_fragment_message_text">Введи своє Ім\'я, Прізвище та Ім\'я по батькові</string>
    <string name="user_full_name_fragment_et_first_name_hint">Введи ім\'я</string>
    <string name="user_full_name_fragment_et_last_name_hint">Введи прізвище</string>
    <string name="user_full_name_fragment_et_middle_name_hint">Введи ім\'я по батькові</string>
    <string name="user_full_name_fragment_btn_next_title">Продовжити</string>
    <string name="user_full_name_fragment_alert_dialog_text">Всі поля повинні бути заповнені, перевірте коректність введених даних</string>
    <string name="user_full_name_fragment_alert_dialog_title">Помилка вводу</string>
    <string name="user_full_name_fragment_alert_dialog_button_cancel_title">Продовжити</string>

    <!--Fragment to enter user documents data-->
    <string name="user_documents_fragment_message">Введи дані зі свого паспорту та картки платника податків</string>
    <string name="user_documents_fragment_et_IPN_hint">Введи ІПН</string>
    <string name="user_documents_fragment_et_passport_hint">Серія та номер паспорту(ХХ000000)</string>
    <string name="user_documents_fragment_btn_birth_date_title">Обери дату народження</string>
    <string name="user_documents_fragment_btn_next_title">Продовжити</string>
    <string name="user_documents_fragment_alert_dialog_text">Всі поля повинні бути заповнені, перевірте коректність введених даних</string>
    <string name="user_documents_fragment_alert_dialog_title">Увага</string>
    <string name="user_documents_fragment_alert_dialog_button_cancel_title">Продовжити</string>
    <string name="user_documents_fragment_internet_connection_problem_message">Помилка обміну даних з сервером. Будь ласка перевірте наявність інтернет доступу</string>
    <string name="user_documents_fragment_success_data_set_message">Ваші дані успішно надіслані, найближчим часом з Вами зв\'яжуться</string>
    <string name="user_documents_fragment_inn_not_valid_message">Ваш ІПН та дата народження не співпадають, введіть коректні значення</string>
    <string name="user_documents_fragment_credit_query_already_send_message">Ваш запит, вже було надіслано до кредитних організацій. Дочекайтесь будь ласка відповіді.</string>


    <!--DAYS_OF_WEEK name-->
    <string-array name="days_of_week">
        <item>нд</item>
        <item>пн</item>
        <item>вт</item>
        <item>ср</item>
        <item>чт</item>
        <item>пт</item>
        <item>сб</item>
    </string-array>

    <!--MONTH name-->
    <string-array name="month_names">
        <item>січня</item>
        <item>лютого</item>
        <item>березня</item>
        <item>квітня</item>
        <item>травня</item>
        <item>червня</item>
        <item>липня</item>
        <item>серпня</item>
        <item>вересня</item>
        <item>жовтня</item>
        <item>листопада</item>
        <item>грудня</item>
    </string-array>

</resources>
