<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_info_dialog_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/info_dialog_fragment_title"
        style="@style/InfoDialogTextView"/>

    <TextView
        android:id="@+id/tv_info_dialog_fragment_button_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_dialog_fragment_phone"
        style="@style/InfoDialogTextView"/>

    <TextView
        android:id="@+id/tv_info_dialog_fragment_button_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_dialog_fragment_most_used_questions_btn"
        style="@style/InfoDialogTextView"/>

    <TextView
        android:id="@+id/tv_info_dialog_fragment_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="end"
        android:text="@string/info_dialog_fragment_btn_cancel"
        style="@style/InfoDialogTextView"/>

</LinearLayout>