<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_user_full_name_fragment_message"
        style="@style/TextViewMessageToUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_full_name_fragment_message_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_full_name_fragment_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextUserFullNameFragment"
        android:inputType="textPersonName"
        android:hint="@string/user_full_name_fragment_et_first_name_hint"
        android:digits="@string/digits_for_name_entering"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/et_user_full_name_fragment_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_full_name_fragment_message"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_full_name_fragment_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextUserFullNameFragment"
        android:hint="@string/user_full_name_fragment_et_last_name_hint"
        android:inputType="textPersonName"
        android:digits="@string/digits_for_name_entering"
        android:maxLength="30"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/et_user_full_name_fragment_middle_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_full_name_fragment_first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_full_name_fragment_middle_name"
        style="@style/EditTextUserFullNameFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:digits="@string/digits_for_name_entering"
        android:hint="@string/user_full_name_fragment_et_middle_name_hint"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/btn_user_full_name_fragment_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_full_name_fragment_last_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_full_name_fragment_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/user_full_name_fragment_btn_next_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>