<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_code_verification_fragment_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewMessageToUser"
        android:text="@string/code_verification_fragment_message_to_user_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_code_verification_fragment_code_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:maxLength="6"
        android:hint="@string/code_verification_fragment_edit_text_hint"
        android:inputType="number"
        android:textColorHint="@color/baseTextColor"
        app:layout_constraintBottom_toTopOf="@+id/btn_code_verification_fragment_change_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_code_verification_fragment_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_code_verification_fragment_change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_verification_fragment_button_text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>