<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_user_documents_fragment_message"
        style="@style/TextViewMessageToUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_documents_fragment_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginEnd="@dimen/user_documents_fragment_views_side_margins"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_documents_fragment_message"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_documents_fragment_ipn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_documents_fragment_et_IPN_hint"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginBottom="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginStart="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginEnd="@dimen/user_documents_fragment_views_side_margins"
        app:layout_constraintBottom_toTopOf="@+id/btn_user_documents_fragment_birth_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/et_user_documents_fragment_passport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_documents_fragment_et_passport_hint"
            android:maxLength="10"
            app:met_mask="##.######" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_documents_fragment_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginEnd="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginBottom="8dp"
        android:text="@string/user_documents_fragment_btn_birth_date_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_user_documents_fragment_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_documents_fragment_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_documents_fragment_btn_next_title"
        android:layout_marginStart="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginEnd="@dimen/user_documents_fragment_views_side_margins"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>